# db/schema.rb
@@ -10,13 +10,30 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[8.0].define(version: 2025_08_07_111456) do
+ActiveRecord::Schema[8.0].define(version: 2025_08_12_114846) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "pg_catalog.plpgsql"
+
+  # Custom types defined in this database.
+  # Note that some types may not work with other database engines. Be careful if changing database.
+  create_enum "board_status", ["processing", "stable", "oscillating", "max_attempts_reached"]
 
   create_table "boards", force: :cascade do |t|
     t.jsonb "state", default: [], null: false
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
+    t.enum "status", default: "processing", null: false, enum_type: "board_status"
   end
+
+  create_table "steps", force: :cascade do |t|
+    t.bigint "board_id", null: false
+    t.integer "number", default: 0, null: false
+    t.jsonb "state", default: [], null: false
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+    t.index ["board_id", "number"], name: "index_steps_on_board_id_and_number", unique: true
+    t.index ["board_id"], name: "index_steps_on_board_id"
+  end
+
+  add_foreign_key "steps", "boards"
 end
